[package]
name = "job_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.6.1"
rustc-serialize = "0.3.24"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
crontab = "0.2.0"
chrono = "0.4.22"